--- a/BlogSn/app/views/publicaciones/show.html.erb
+++ b/BlogSn/app/views/publicaciones/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Publicaciones#show</h1>
-<p>Find me in app/views/publicaciones/show.html.erb</p>
+<div>   
+    <h2> Titulo del Post :  <i> <%= @postReview.titulo %> </i></h2>
+    <p><%= @postReview.cuerpo %></p>
+
+    <h3> Autor : <i><%= @postReview.autor %></i> </h3>
+    <h4>Fecha <i><%= @postReview.fecha %></i></h4>
+</div>
