--- a/BlogSn/app/views/layouts/application.html.erb
+++ b/BlogSn/app/views/layouts/application.html.erb
@@ -9,11 +9,32 @@
   </head>
 
   <body>
-  <ul>
-    
-  </ul>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Waflinga</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+           
+            <li><%= link_to 'Listar Post', index_path %></li>
+            <li><%= link_to 'Atras', :back %></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
 
+<br><br><br>
+<div class ='container'>
+  
     <%= yield %>
+</div>
   </body>
 </html>
