--- a/BlogSn/app/views/publicaciones/new.html.erb
+++ b/BlogSn/app/views/publicaciones/new.html.erb
@@ -1,38 +1,37 @@
 <h1>Crear un Post</h1>
 
-<%= form_for :postNuevo , url: publicaciones_path , method: :post do |p| %>
+<%= form_for :postNuevo , url: publicaciones_path , method: :post , class:'form-horizontal' do |p| %>
 
-    <div>
-        <%= p.label 'Titulo del Post' %>
-        <%= p.text_field :titulo %>
+    <div class='form-group'>
+        <%= p.label 'Titulo del Post' ,class:'control-label'%>
+        <%= p.text_field :titulo,class:'form-control' %>
     </div>
 
-    <div>
-        <%= p.label 'Imagen' %>
+    <div class='form-group'>
+        <%= p.label 'Imagen',class:'control-label' %>
         <br>
-        <%= p.file_field :imagen %>
+        <%= p.file_field :imagen ,class:'form-control',class: 'btn btn-lg btn-warning'%>
        
     </div>
 
-    <div>
-        <%= p.label 'Autor del Post' %>
-        <%= p.text_field :autor %>
+    <div class='form-group'>
+        <%= p.label 'Autor del Post' ,class:'control-label'%>
+        <%= p.text_field :autor ,class:'form-control'%>
     </div>
 
-
-
-    <div>
-        <%= p.label 'Cuerpo del Post' %>
-        <%= p.text_area :cuerpo %>
+    <div class='form-group'>
+        <%= p.label 'Cuerpo' %>
+        <%= p.text_area :cuerpo ,class:'form-control', rows: 5 %>
     </div>
 
-    <div>
-        <%= p.label 'Fecha del Post' %>
-        <%= p.date_field :fecha %>
+    <div class='form-group'>
+        <%= p.label 'Fecha del Post', class:'control-label' %>
+        <%= p.date_field :fecha ,class:'form-control'%>
     </div>
 
-    <div>
-        <%= button_to 'Guardar'  %>
+    <div class='form-group'>
+        <%= button_to 'Guardar' ,class:'form-control ' %>
+        <%= button_to 'Cancelar',class:'form-control ' %>
     </div>
 
 <%end %>
