--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,6 +1,8 @@
+<div class='form-group'>
 <%= form_for @image do |f| %>
     <%= f.label :description %>      <br/>
-    <%= f.text_field :description %> <br/>
-
-    <%= f.submit %>
+    <%= f.text_field :description, class: 'form-control' %> <br/>
+    <%= f.submit 'Aceptar', :class=>'btn btn-primary btn-block btn-large' %>
 <%end%>
+</div>
+</div>
