--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,7 +1,11 @@
 <div class='form-group'>
 <%= form_for @image do |f| %>
-    <%= f.label :description %>      <br/>
+
+    <%= f.label :Description %>      <br/>
     <%= f.text_field :description, class: 'form-control' %> <br/>
+
+    <%= f.label :Picture %>      <br/>
+    <%= f.file_field :picture, class: 'form-control' %> <br/>
     <%= f.submit 'Aceptar', :class=>'btn btn-primary btn-block btn-large' %>
 <%end%>
 </div>
