--- a/app/views/images/_image.html.erb
+++ b/app/views/images/_image.html.erb
@@ -1,9 +1,7 @@
 <figure class="figure">
   
-  <%= image_tag image.picture.thumb.url,
-   class: 'figure-img img-fluid rounded' %>
+  <%= image_tag image.picture.thumb.url,  class:"figure-img img-fluid rounded"%>
   
-   class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
   <figcaption class="figure-caption">
      <%= image.description %> 
      <%= link_to 'Edit', edit_image_path(image)%>
