--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,10 +1,23 @@
+<% if @image.errors.any?%>
+    <div class="alert alert-danger">
+        <h4>Ohh no!</h4>
+        <p>Ha ocurrido un error!!!
+        </p>
+        
+    </div>
+<%end%>
 <div class='form-group'>
 <%= form_for @image do |f| %>
 
-    <%= f.label :Description %>      <br/>
-    <%= f.text_field :description, class: 'form-control' %> <br/>
-
-    <%= f.label :Picture %>      <br/>
+    <%= f.label :description %>  
+    <%= f.text_field :description, class: 'form-control' %> 
+    <% if @image.errors[:description].any?%>
+        <span class="badge badge-pill badge-danger">
+            <%= @image.errors[:description].first%>
+        </span>
+<%end%>
+    <br/>
+    <%= f.label :picture %>      <br/>
     <%= f.file_field :picture, class: 'form-control' %> <br/>
     <%= f.submit 'Aceptar', :class=>'btn btn-primary btn-block btn-large' %>
 <%end%>
