--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,25 @@
 
   <body>
 
-    <ul class="nav justify-content-end">
-      <% if user_signed_in? %>
+
+      <ul class="nav justify-content-end">
+        <% if user_signed_in? %>
         <li class="nav-item">
-        <%= link_to 'Salir', destroy_user_session_path, method: :delete %>
+        <%= link_to 'Salir', destroy_user_session_path, method: :delete, class: 'nav-link' %>
         </li>
         <%else%>
         <li class="nav-item">
-        <%= link_to 'Iniciar ', new_user_session_path %>
+        <%= link_to 'Iniciar ', new_user_session_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-        <%= link_to ' Registrar ', new_user_registration_path %>
+        <%= link_to ' Registrar ', new_user_registration_path, class: 'nav-link' %>
         </li>
       <% end  %>
+      </ul>
+    </div>
+  </nav>
 
-    </ul>
+
 
     <div class='container'>
       <p class="notice"><%= notice %></p>
